loggers are added