@@ -123,19 +123,24 @@ public class DynamicMultiSelectListService {
 
         List<Element<Child>> children = caseData.getChildren();
         String childrenFromOrder = order.getValue().getChildrenList();
+        log.info("Children list from chosen serve order:: {} ", childrenFromOrder);
         List<String> childrenList = Stream.of(childrenFromOrder.split(","))
             .map(String::trim)
-            .map(elem -> new String(elem))
-            .collect(Collectors.toList());
+            .toList();
+        log.info("Children list after trimming:: {} ", childrenList);
         if (C100_CASE_TYPE.equalsIgnoreCase(caseData.getCaseTypeOfApplication())
             && finl.equals(caseData.getSelectTypeOfOrder())
             && Yes.equals(caseData.getDoesOrderClosesCase())
             && Yes.equals(caseData.getServeOrderData().getDoYouWantToServeOrder())
             && null != children) {
+            log.info("inside if loop...");
             children.forEach(child -> {
+                log.info("Child inside first foreach:: {} ", child);
                 String childName = child.getValue().getFullName();
                 childrenList.forEach(value -> {
+                    log.info("Child inside second foreach:: {} ", value);
                     if (childName.equalsIgnoreCase(value)) {
+                        log.info("Child inside second ifloop ");
                         //Do not set this value to No, it should be either Yes or Null
                         child.getValue().setIsFinalOrderIssued(Yes);
                         log.info("Child Element is finalOrderIssued:: {} ", child.getValue().getIsFinalOrderIssued());
